<resources>
    <string name="app_name">receitasApp</string>
    <string name="preparation_time">Tempo de preparo: </string>
    <string name="number_of_servings">Numero de porções: </string>
    <string name="difficulty_recipes">Dificuldade: </string>
    <string name="minutes">minutos</string>
    <string name="recipe_ready_image">Imagem da receita pronta</string>
    <string name="recipe_name">Nome da receita</string>
    <string name="description_txt">Descrição:</string>
    <string name="add_recipe">Adicionar receita</string>
    <string name="what_is_the_name">Qual o nome da receita ?</string>
    <string name="how_many">Serve quantas porções ?</string>
    <string name="whats_difficulty">Qual a dificuldade ?</string>
    <string name="how_long_ready">Quanto tempo para ficar pronta ?</string>
    <string name="make_description">Faça uma descrição da receita</string>
    <string name="add_button">Adicionar</string>
    <string name="add_iv_galery_txt">Adicionar uma foto</string>
    <string name="add_iv_camera_txt">Tirar uma foto</string>
    <string name="new_recipe_txt">Nova receita</string>
    <string name="show_sucess_message">Receita adicionada com sucesso</string>

</resources>