<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipeActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_marginTop="240dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_recipe_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/preparation_time"
                app:layout_constraintEnd_toEndOf="@+id/tv_recipe_name"
                app:layout_constraintStart_toStartOf="@+id/tv_recipe_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name" />

            <TextView
                android:id="@+id/tv_recipe_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/number_of_servings"
                app:layout_constraintEnd_toEndOf="@+id/tv_recipe_time"
                app:layout_constraintStart_toStartOf="@+id/tv_recipe_time"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_time" />

            <TextView
                android:id="@+id/tv_recipe_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/difficulty_recipes"
                app:layout_constraintEnd_toEndOf="@+id/tv_recipe_amount"
                app:layout_constraintStart_toStartOf="@+id/tv_recipe_amount"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_amount" />

            <TextView
                android:id="@+id/descrition_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/description_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_difficulty" />

            <TextView
                android:id="@+id/descrition_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="uhsaoiudjopaisjfoasjkofjoapsjfopjaospfojpodjfoajsofajsofjasopjfopasjopdjopasjdfojpoemfpowenifhnoajposfhoqmnepfoqwmodjopanfpoóqejfiohnanmmsfpojaómsfponmq3wojfm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descrition_recipe" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>